apps/agregarr/agregarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: agregarr
  namespace: apps
spec:
  selector:
    app: agregarr
  ports:
    - name: http
      port: 7171
      targetPort: 7171
      protocol: TCP
  type: ClusterIP
