apps/agregarr/agregarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agregarr
  namespace: apps
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: agregarr.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: agregarr
                port:
                  number: 7171
